--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <html>
 <head>
-    <title>Google Clone</title>
+    <title>Google Flex</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
     <!-- Top Nav Section -->
-<div class="flex-container" id="flex-end">
+<div class="flex-container" id="nav-bar">
     <div class="block">Gmail</div>
     <div class="block">Images</div>
     <div class="block" id="block-logo-icon"></div>
     <div class="block" id="block-logo-user"></div>
 </div>
 <!-- Display Section -->
-<div class="flex-container" id="section-1">
+<div class="flex-container" id="section-1-display">
     <div id="google-image"></div>
 </div>
 <!-- Search Section -->
-<div class="flex-container" id="section-2">
+<div class="flex-container" id="section-2-content">
     <form id= "search-bar" action="http://www.google.com/search" method="GET">
         <input type="text" name="q"/>
     </form>    
@@ -25,6 +25,14 @@
         <input id="search-options-box" type="submit" value="Search" />
         <input id="search-options-box" type="submit" value="I'm Feeling Lucky" />
     </div>
+</div>
+<!-- Footer Section -->
+<div class="buffer"></div>
+<div class="flex-container" id="section-3-footer">
+    <a class="footer-blocks" id="footer-link" href="#">Advertising</a>
+    <a class="footer-blocks" id="footer-link" href="#">Business</a>
+    <a class="footer-blocks" id="footer-link" href="#">About</a>
+    <a class="footer-blocks" id="footer-link" href="#">How Search Works</a>
 </div>
 </body>
 </html>
